--- a/upsource-bot.yml
+++ b/upsource-bot.yml
@@ -12,9 +12,12 @@ database:
   # the JDBC URL
   url: jdbc:h2:./target/example.h2
 
+# Fill in locally
+githuboauthtoken: 
+
 server:
   type: simple
   applicationContextPath: /
   connector:
     type: http
-    port: 8080
+    port: 53735
