--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
                     implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                 <transformer
                     implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>im.tox.upsourcebot.web.UpsourceApplication
+                  <mainClass>im.tox.upsourcebot.UpsourceApplication
                   </mainClass>
                 </transformer>
               </transformers>
