--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
       <artifactId>github-api</artifactId>
       <version>1.63</version>
     </dependency>
+
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.10</version>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
